--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </div>
 
                         <input type="hidden" name="_next"
-                            value="http://127.0.0.1:5500/Landing%20Page%20-%20Alzate%20y%20Asociados/thankyou.html">
+                            value="thankyou.html">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
                         <input type="hidden" name="_subject" value="¡Nuevo contacto!">
