--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
                         <div class="nameempresa">
                             <span class="label-form">Nombre de la empresa</span>
                             <label for="nameempresa"></label>
-                            <input type="text" placeholder="" name="Nombre Empresa" id="nameempresa_input">
+                            <input type="text" placeholder="" name="Nombre Empresa" id="nameempresa_input"required>
                         </div>
                         <div class="name">
                             <span class="label-form">Su nombre</span>
                             <label for="name"></label>
-                            <input type="text" placeholder="" name="Su nombre" id="name_input">
+                            <input type="text" placeholder="" name="Su nombre" id="name_input"required>
                         </div>
                         <div class="telefono">
                             <span class="label-form">Teléfono</span>
                             <label for="telefono"></label>
-                            <input type="number" placeholder="" name="Teléfono" id="telefono_input">
+                            <input type="number" placeholder="" name="Teléfono" id="telefono_input" required>
                         </div>
                         <div class="email">
                             <span class="label-form">Email</span>
                             <label for="email"></label>
-                            <input type="email" placeholder="" name="Email" id="email_input">
+                            <input type="email" placeholder="" name="Email" id="email_input"required>
                         </div>
                         <div class="terms">
                             <span>* Al dar clic en el botón enviar está aceptando los <a href=""
@@ -66,7 +66,7 @@
                         </div>
 
                         <input type="hidden" name="_next"
-                            value="thankyou.html">
+                            value="https://cmiguezd.github.io/thankyou.html">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
                         <input type="hidden" name="_subject" value="¡Nuevo contacto!">
