--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                             </div>
                         </div>
 
-                        <input type="hidden" name="_next"
-                            value="https://cmiguezd.github.io/Landing-Page---Alzate-y-Asociados/thankyou.html">
+                        <input type="hidden" name="_next" value="https://cmiguezd.github.io/Landing-Page---Alzate-y-Asociados/thankyou.html">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
                         <input type="hidden" name="_subject" value="¡Nuevo contacto!">
