--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>Protección de Datos Personales | Alzate y Asociados</title>
 </head>
 
 <body>
