--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="./assets/check-circle.png">
     <title>Protección de Datos Personales | Alzate y Asociados</title>
 </head>
 
@@ -64,7 +65,7 @@
                                 <input type="submit" value="Enviar" id="form_button"> <i class="bi bi-send"></i>
                             </div>
                         </div>
-                        <input type="hidden" name="_next" value="https://cmiguezd.github.io/Landing-Page---Alzate-y-Asociados/thankyou.html">
+
                         <input type="hidden" name="_next"
                             value="https://cmiguezd.github.io/Landing-Page---Alzate-y-Asociados/thankyou.html">
                         <input type="hidden" name="_captcha" value="false">
