--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <input type="email" placeholder="" name="Email" id="email_input"required>
                         </div>
                         <div class="terms">
-                            <span>* Al dar clic en el botón enviar está aceptando los <a href=""
+                            <span>* Al dar clic en el botón enviar está aceptando los <a href="./terms.html"
                                     class="terminos">términos y condiciones.</a></span>
                             <div class="submit">
                                 <input type="submit" value="Enviar" id="form_button"> <i class="bi bi-send"></i>
