--- a/terms.html
+++ b/terms.html
@@ -23,7 +23,7 @@
                     <h1 class="title-h1_terms">Términos y Condiciones</h1>
                 </div>
                 <div class="CTA1_terms">
-                    <a href="#formulario" class="boton">Regresar al sitio prinicipal
+                    <a href="./index.html" class="boton">Regresar al sitio prinicipal
                         <span class="material-symbols-outlined">arrow_right_alt</span></a>
                 </div>
 
