--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/png" href="./assets/check-circle.png">
+    <link rel="icon" type="image/png" href="./assets/favicon.jpeg">
     <title>Protección de Datos Personales | Alzate y Asociados</title>
 </head>
 
@@ -41,12 +41,12 @@
                         <div class="nameempresa">
                             <span class="label-form">Nombre de la empresa</span>
                             <label for="nameempresa"></label>
-                            <input type="text" placeholder="" name="Nombre Empresa" id="nameempresa_input"required>
+                            <input type="text" placeholder="" name="Nombre Empresa" id="nameempresa_input" required>
                         </div>
                         <div class="name">
                             <span class="label-form">Su nombre</span>
                             <label for="name"></label>
-                            <input type="text" placeholder="" name="Su nombre" id="name_input"required>
+                            <input type="text" placeholder="" name="Su nombre" id="name_input" required>
                         </div>
                         <div class="telefono">
                             <span class="label-form">Teléfono</span>
@@ -56,10 +56,10 @@
                         <div class="email">
                             <span class="label-form">Email</span>
                             <label for="email"></label>
-                            <input type="email" placeholder="" name="Email" id="email_input"required>
+                            <input type="email" placeholder="" name="Email" id="email_input" required>
                         </div>
                         <div class="terms">
-                            <span>* Al dar clic en el botón enviar está aceptando los <a href="./terms.html"
+                            <span>* Al dar clic en el botón enviar está aceptando los <a href="#"
                                     class="terminos">términos y condiciones.</a></span>
                             <div class="submit">
                                 <input type="submit" value="Enviar" id="form_button"> <i class="bi bi-send"></i>
@@ -135,10 +135,39 @@
             <div class="text-seccion3">
                 <p>
                     Somos una firma jurídica especializada en Compliance con más de 10 años de experiencia demostrable y
-                    presencia en Estados Unidos, Panamá, Ecuador y Colombia. <a href="">¡Más de 500 clientes han
-                        confiado en
-                        nosotros!</a>
+                    presencia en Estados Unidos, Panamá, Ecuador y Colombia.
                 </p>
+            </div>
+            <div class="banderas">
+                <div class="bandera">
+                    <a href="">
+                        <img src="./assets/us.svg" alt="">
+                        <span class="namepais">Estados Unidos</span>
+                    </a>
+                </div>
+                <div class="bandera">
+                    <a href="">
+                        <img src="./assets/pa.svg" alt="">
+                        <span class="namepais">Panamá</span>
+                    </a>
+                </div>
+                <div class="bandera">
+                    <a href="">
+                        <img src="./assets/ec.svg" alt="">
+                        <span class="namepais">Ecuador</span>
+                    </a>
+                </div>
+                <div class="bandera">
+                    <a href="">
+                        <img src="./assets/co.svg" alt="">
+                        <span class="namepais">Colombia</span>
+                    </a>
+                </div>
+            </div>
+            <div class="text2-seccion3">
+                <a href="">¡Más de 500 clientes han
+                    confiado en
+                    nosotros!</a>
             </div>
         </div>
     </section>
@@ -168,7 +197,8 @@
                         <a href="#formulario"><img src="./assets/Fundacion Santa Fe de Bogota.png" alt=""></a>
                     </div>
                     <div class="slide">
-                        <a href="#formulario"><img src="./assets/Universidad politécnico grancolombiano.png" alt=""></a>
+                        <a href="#formulario"><img src="./assets/Universidad politécnico grancolombiano.png"
+                                alt=""></a>
                     </div>
                     <div class="slide">
                         <a href="#formulario"><img src="./assets/Centro Comercial Santa Fe.png" alt=""></a>
@@ -210,9 +240,12 @@
                 <h3>Siguenos en nuestras redes sociales</h3>
             </div>
             <div class="img-rrss">
-                <a href="www.facebook.com/alzateyasociados/"><img src="./assets/facebook.png" alt="" class="rrss-img"></a>
-                <a href="www.linkedin.com/company/alzateyasociados"><img src="./assets/linkedin.png" alt="" class="rrss-img"></a>
-                <a href="www.instagram.com/alzateyasociados.ec"><img src="./assets/instagram.png" alt="" class="rrss-img"></a>
+                <a href="www.facebook.com/alzateyasociados/"><img src="./assets/facebook.png" alt=""
+                        class="rrss-img"></a>
+                <a href="www.linkedin.com/company/alzateyasociados"><img src="./assets/linkedin.png" alt=""
+                        class="rrss-img"></a>
+                <a href="www.instagram.com/alzateyasociados.ec"><img src="./assets/instagram.png" alt=""
+                        class="rrss-img"></a>
             </div>
         </div>
     </section>
