--- a/thankyou.html
+++ b/thankyou.html
@@ -8,7 +8,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="./assets/favicon.jpeg">
+    <title>Información Enviada | Alzate y Asociados</title>
 </head>
 <body>
     <section class="seccion1_tp" id="seccion1">
@@ -30,6 +31,22 @@
                 <div class="background-image_tp">
                     <img src="./assets/background.png" alt="">
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="seccion6">
+        <div class="div-seccion6">
+            <div class="title-seccion6">
+                <h3>Siguenos en nuestras redes sociales</h3>
+            </div>
+            <div class="img-rrss">
+                <a href="www.facebook.com/alzateyasociados/"><img src="./assets/facebook.png" alt=""
+                        class="rrss-img"></a>
+                <a href="www.linkedin.com/company/alzateyasociados"><img src="./assets/linkedin.png" alt=""
+                        class="rrss-img"></a>
+                <a href="www.instagram.com/alzateyasociados.ec"><img src="./assets/instagram.png" alt=""
+                        class="rrss-img"></a>
             </div>
         </div>
     </section>
